Resolves: fdo#88933 Labeling of images impossible without category

Change-Id: I8b618d5cd6b3e9d5e42e04e215592a7b748dbb9f